--- a/HotelManagement/HotelManagement/Views/MainWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/MainWindow.xaml
@@ -30,6 +30,14 @@
                              Value="Rooms">
                     <Setter Property="ContentTemplate" Value="{StaticResource RoomsViewTemplate}"/>
                 </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=NavigationMenuListBox, Path=SelectedItem}" 
+                             Value="Accounts">
+                    <Setter Property="ContentTemplate" Value="{StaticResource AccountsViewTemplate}"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=NavigationMenuListBox, Path=SelectedItem}" 
+                             Value="Services">
+                    <Setter Property="ContentTemplate" Value="{StaticResource ServicesViewTemplate}"/>
+                </DataTrigger>
             </Style.Triggers>
         </Style>
     </Window.Resources>
