--- a/HotelManagement/HotelManagement/Views/AccountsView.xaml
+++ b/HotelManagement/HotelManagement/Views/AccountsView.xaml
@@ -6,70 +6,159 @@
              xmlns:local="clr-namespace:HotelManagement.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
-             mc:Ignorable="d" FontFamily="Roboto" FontSize="14"
+             mc:Ignorable="d" FontSize="18"
+             FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              d:DesignHeight="600" d:DesignWidth="1000">
     <UserControl.DataContext>
         <viewModels:AccountViewModel/>
     </UserControl.DataContext>
-    
+    <UserControl.Resources>
+        <viewModels:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
+    </UserControl.Resources>
     <Grid Background="White">
-        <materialDesign:DialogHost Name="dialog" BorderBrush="{DynamicResource MaterialDesignDivider}">
+        <materialDesign:DialogHost Name="dialog" 
+            CloseOnClickAway="True"
+            IsOpen="{Binding IsOpenDialog}"    
+            BorderBrush="{DynamicResource MaterialDesignDivider}">
             <materialDesign:DialogHost.DialogContent>
-                <Grid Height="240" Width="300">
+                <Grid Height="250" Width="300">
                     <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition Height="8"/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
+                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Text="New Account" Margin="8" FontSize="18" FontWeight="Bold"/>
+                    <TextBlock Grid.Row="0" Text="New Account" Margin="4" FontSize="18" FontWeight="Bold" VerticalAlignment="Center"/>
+                    <TextBlock Grid.Row="1" Text="Default password is 1" Margin="4" FontSize="13"/>
                     <TextBox Grid.Row="2" Margin="4"
                         Style="{StaticResource MaterialDesignOutlinedTextBox}"
                         VerticalAlignment="Top"
-                        AcceptsReturn="True"
+                        AcceptsReturn="True" Text="{Binding Username}"
                         materialDesign:HintAssist.Hint="Username"/>
-                    <ComboBox Grid.Row="3" Grid.Column="1" x:Name="cbx_cat" 
+                    <ComboBox Grid.Row="3" Grid.Column="1" x:Name="cbx_roles" ItemsSource="{Binding Roles}"
                         Style="{StaticResource MaterialDesignOutlinedComboBox}" 
+                        SelectedItem="{Binding SelectedRole}"
                         Margin="4" materialDesign:TextFieldAssist.PrefixText="Role: ">
-                        <ComboBoxItem>
-                            <TextBlock Text="Admin"/>
-                        </ComboBoxItem>
-                        <ComboBoxItem>
-                            <TextBlock Text="Reservation"/>
-                        </ComboBoxItem>
-                        <ComboBoxItem>
-                            <TextBlock Text="Receptionist"/>
-                        </ComboBoxItem>
                     </ComboBox>
-                    <StackPanel Grid.Row="4" Orientation="Horizontal">
-                        <Button HorizontalAlignment="Center" Margin="4"
+                    <Grid Grid.Row="4">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" HorizontalAlignment="Center" Margin="4"
                             Style="{StaticResource MaterialDesignRaisedButton}"
-                            Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
+                            Command="{Binding SaveNewAccountCommand}">
                             <TextBlock Text="Save" FontSize="18"/>
                         </Button>
-                        <Button HorizontalAlignment="Center" Margin="4"
+                        <Button Grid.Column="1" HorizontalAlignment="Center" Margin="4"
                             Style="{StaticResource MaterialDesignRaisedButton}"
                             Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
                             <TextBlock Text="Close" FontSize="18"/>
                         </Button>
-                    </StackPanel>
+                    </Grid>
                 </Grid>
             </materialDesign:DialogHost.DialogContent>
         </materialDesign:DialogHost>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="100"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Button Grid.Row="0" HorizontalAlignment="Center" Width="120" Height="40" Margin="4"
-                    Style="{StaticResource MaterialDesignFlatButton}"
-                    Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
-                    CommandTarget="{Binding ElementName=dialog}">
-                <TextBlock Text="Close" FontSize="18"/>
-            </Button>
+            <!--Header-->
+            <Grid Grid.Row="0" Background="{StaticResource PrimaryLightBrush}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="Accounts" FontSize="20" FontWeight="Bold" 
+                    HorizontalAlignment="Stretch" Margin="8" Foreground="White" VerticalAlignment="Center"/>
+                <Border Grid.Column="1" BorderBrush="White" BorderThickness="0.3" Margin="15 10 5 10" MaxWidth="600" HorizontalAlignment="Stretch" CornerRadius="3">
+                    <Grid>
+                        <Grid.Resources>
+                            <SolidColorBrush x:Key="PrimaryHueMidBrush" Color="Transparent"/>
+                        </Grid.Resources>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width=".2*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Width="Auto" Height="Auto"
+                            IsEnabled="{Binding IsOpenDialog, Converter={StaticResource InverseBooleanConverter}}"
+                            Style="{StaticResource MaterialDesignFlatButton}" 
+                            Content="{materialDesign:PackIcon Kind=Search, Size=20}" 
+                            Foreground="White"/>
+                        <TextBox Grid.Column="1" Margin="5 0" 
+                            IsEnabled="{Binding IsOpenDialog, Converter={StaticResource InverseBooleanConverter}}"
+                            Text="{Binding ContentSearch,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
+                            CaretBrush="White" VerticalContentAlignment="Center" 
+                            FontSize="16" Foreground="White" 
+                            materialDesign:HintAssist.Hint="Enter text to search" 
+                            BorderBrush="Transparent">
+                            <TextBox.InputBindings>
+                                <KeyBinding Command="{Binding SearchAccountCommand}" Key="Return"/>
+                            </TextBox.InputBindings>
+                        </TextBox>
+                    </Grid>
+                </Border>
+                <Button Grid.Column="2" HorizontalAlignment="Right" Margin="4" Padding="8"
+                    IsEnabled="{Binding IsOpenDialog, Converter={StaticResource InverseBooleanConverter}}"
+                    Style="{StaticResource MaterialDesignRaisedButton}"
+                    Command="{Binding AddNewAccountCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="PlusCircle" VerticalAlignment="Center" Width="16" Height="16"/>
+                        <Grid Width="4"/>
+                        <TextBlock Text="New Account" FontSize="16" VerticalAlignment="Center"/>
+                    </StackPanel>
+                </Button>
+            </Grid>
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden">
+                <ItemsControl ItemsSource="{Binding Accounts}" HorizontalAlignment="left" Margin="0 5">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <materialDesign:Card Margin="5 5 5 5">
+                            <Grid Height="200" Width="130">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="110" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+                                <materialDesign:ColorZone
+                                    Mode="PrimaryLight"
+                                    VerticalAlignment="Stretch">
+                                    <materialDesign:PackIcon
+                                      Kind="AccountCircle"
+                                      Height="100"
+                                      Width="100"
+                                      VerticalAlignment="Center"
+                                      HorizontalAlignment="Center" />
+                                </materialDesign:ColorZone>
+                                <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Username:" FontSize="14" VerticalAlignment="Center"/>
+                                        <TextBlock Text="{Binding username}" FontSize="14" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Role:" FontSize="14" Margin="4" VerticalAlignment="Center"/>
+                                        <TextBlock Text="{Binding permission}" FontSize="14" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                    <Button
+                                      Style="{StaticResource MaterialDesignFlatButton}"
+                                      Command="{Binding RelativeSource={RelativeSource AncestorType=ItemsControl},Path=DataContext.EditAccountCommand}"
+                                        CommandParameter="{Binding}"
+                                      Margin="0 4 0 0"
+                                      Content="EDIT" />
+                                </StackPanel>
+                            </Grid>
+                            </materialDesign:Card>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
         </Grid>
-
-
     </Grid>
 </UserControl>
