--- a/HotelManagement/HotelManagement/Views/AccountsView.xaml
+++ b/HotelManagement/HotelManagement/Views/AccountsView.xaml
@@ -6,159 +6,147 @@
              xmlns:local="clr-namespace:HotelManagement.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
-             mc:Ignorable="d" FontSize="18"
+             mc:Ignorable="d" FontSize="16"
              FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              d:DesignHeight="600" d:DesignWidth="1000">
     <UserControl.DataContext>
         <viewModels:AccountViewModel/>
     </UserControl.DataContext>
-    <UserControl.Resources>
-        <viewModels:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
-    </UserControl.Resources>
     <Grid Background="White">
-        <materialDesign:DialogHost Name="dialog" 
-            CloseOnClickAway="True"
-            IsOpen="{Binding IsOpenDialog}"    
-            BorderBrush="{DynamicResource MaterialDesignDivider}">
+        <materialDesign:DialogHost Name="dialog" Identifier="AccountDialog" CloseOnClickAway="True" 
+            DialogTheme="Inherit" IsOpen="{Binding IsOpenDialog}">
             <materialDesign:DialogHost.DialogContent>
-                <Grid Height="250" Width="300">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="40"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Text="New Account" Margin="4" FontSize="18" FontWeight="Bold" VerticalAlignment="Center"/>
-                    <TextBlock Grid.Row="1" Text="Default password is 1" Margin="4" FontSize="13"/>
-                    <TextBox Grid.Row="2" Margin="4"
-                        Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                        VerticalAlignment="Top"
-                        AcceptsReturn="True" Text="{Binding Username}"
-                        materialDesign:HintAssist.Hint="Username"/>
-                    <ComboBox Grid.Row="3" Grid.Column="1" x:Name="cbx_roles" ItemsSource="{Binding Roles}"
-                        Style="{StaticResource MaterialDesignOutlinedComboBox}" 
-                        SelectedItem="{Binding SelectedRole}"
-                        Margin="4" materialDesign:TextFieldAssist.PrefixText="Role: ">
-                    </ComboBox>
-                    <Grid Grid.Row="4">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" HorizontalAlignment="Center" Margin="4"
+                <Grid Background="White">
+                    <Grid Height="250" Width="300">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="New Account" Margin="4" FontSize="18" FontWeight="Bold" VerticalAlignment="Center"/>
+                        <TextBlock Grid.Row="1" Text="Default password is 1" Margin="4" FontSize="14"/>
+                        <TextBox Grid.Row="2" Margin="4"
+                            Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                            VerticalAlignment="Top"
+                            AcceptsReturn="True" Text="{Binding Username}"
+                            materialDesign:HintAssist.Hint="Username"/>
+                        <ComboBox Grid.Row="3" Grid.Column="1" x:Name="cbx_roles" ItemsSource="{Binding Roles}"
+                            Style="{StaticResource MaterialDesignOutlinedComboBox}" 
+                            SelectedItem="{Binding SelectedRole}"
+                            Margin="4" materialDesign:TextFieldAssist.PrefixText="Role: ">
+                        </ComboBox>
+                        <Grid Grid.Row="4">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Button Grid.Column="0" HorizontalAlignment="Center" Margin="4"
                             Style="{StaticResource MaterialDesignRaisedButton}"
                             Command="{Binding SaveNewAccountCommand}">
-                            <TextBlock Text="Save" FontSize="18"/>
-                        </Button>
-                        <Button Grid.Column="1" HorizontalAlignment="Center" Margin="4"
+                                <TextBlock Text="Save" FontSize="18"/>
+                            </Button>
+                            <Button Grid.Column="1" HorizontalAlignment="Center" Margin="4"
                             Style="{StaticResource MaterialDesignRaisedButton}"
                             Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
-                            <TextBlock Text="Close" FontSize="18"/>
-                        </Button>
+                                <TextBlock Text="Close" FontSize="18"/>
+                            </Button>
+                        </Grid>
                     </Grid>
                 </Grid>
             </materialDesign:DialogHost.DialogContent>
-        </materialDesign:DialogHost>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <!--Header-->
-            <Grid Grid.Row="0" Background="{StaticResource PrimaryLightBrush}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="auto"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="Accounts" FontSize="20" FontWeight="Bold" 
-                    HorizontalAlignment="Stretch" Margin="8" Foreground="White" VerticalAlignment="Center"/>
-                <Border Grid.Column="1" BorderBrush="White" BorderThickness="0.3" Margin="15 10 5 10" MaxWidth="600" HorizontalAlignment="Stretch" CornerRadius="3">
-                    <Grid>
-                        <Grid.Resources>
-                            <SolidColorBrush x:Key="PrimaryHueMidBrush" Color="Transparent"/>
-                        </Grid.Resources>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Background="{StaticResource PrimaryLightBrush}">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width=".2*"/>
+                            <ColumnDefinition Width="auto"/>
                             <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="auto"/>
                         </Grid.ColumnDefinitions>
-                        <Button Width="Auto" Height="Auto"
-                            IsEnabled="{Binding IsOpenDialog, Converter={StaticResource InverseBooleanConverter}}"
-                            Style="{StaticResource MaterialDesignFlatButton}" 
-                            Content="{materialDesign:PackIcon Kind=Search, Size=20}" 
-                            Foreground="White"/>
-                        <TextBox Grid.Column="1" Margin="5 0" 
-                            IsEnabled="{Binding IsOpenDialog, Converter={StaticResource InverseBooleanConverter}}"
-                            Text="{Binding ContentSearch,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
-                            CaretBrush="White" VerticalContentAlignment="Center" 
-                            FontSize="16" Foreground="White" 
-                            materialDesign:HintAssist.Hint="Enter text to search" 
-                            BorderBrush="Transparent">
-                            <TextBox.InputBindings>
-                                <KeyBinding Command="{Binding SearchAccountCommand}" Key="Return"/>
-                            </TextBox.InputBindings>
-                        </TextBox>
-                    </Grid>
-                </Border>
-                <Button Grid.Column="2" HorizontalAlignment="Right" Margin="4" Padding="8"
-                    IsEnabled="{Binding IsOpenDialog, Converter={StaticResource InverseBooleanConverter}}"
-                    Style="{StaticResource MaterialDesignRaisedButton}"
-                    Command="{Binding AddNewAccountCommand}">
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="PlusCircle" VerticalAlignment="Center" Width="16" Height="16"/>
-                        <Grid Width="4"/>
-                        <TextBlock Text="New Account" FontSize="16" VerticalAlignment="Center"/>
-                    </StackPanel>
-                </Button>
-            </Grid>
-            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden">
-                <ItemsControl ItemsSource="{Binding Accounts}" HorizontalAlignment="left" Margin="0 5">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <materialDesign:Card Margin="5 5 5 5">
-                            <Grid Height="200" Width="130">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="110" />
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-                                <materialDesign:ColorZone
-                                    Mode="PrimaryLight"
-                                    VerticalAlignment="Stretch">
-                                    <materialDesign:PackIcon
-                                      Kind="AccountCircle"
-                                      Height="100"
-                                      Width="100"
-                                      VerticalAlignment="Center"
-                                      HorizontalAlignment="Center" />
-                                </materialDesign:ColorZone>
-                                <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Username:" FontSize="14" VerticalAlignment="Center"/>
-                                        <TextBlock Text="{Binding username}" FontSize="14" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Role:" FontSize="14" Margin="4" VerticalAlignment="Center"/>
-                                        <TextBlock Text="{Binding permission}" FontSize="14" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                    <Button
-                                      Style="{StaticResource MaterialDesignFlatButton}"
-                                      Command="{Binding RelativeSource={RelativeSource AncestorType=ItemsControl},Path=DataContext.EditAccountCommand}"
-                                        CommandParameter="{Binding}"
-                                      Margin="0 4 0 0"
-                                      Content="EDIT" />
-                                </StackPanel>
+                        <TextBlock Grid.Column="0" Text="Accounts" FontSize="20" FontWeight="Bold" 
+                    HorizontalAlignment="Stretch" Margin="8" Foreground="White" VerticalAlignment="Center"/>
+                        <Border Grid.Column="1" BorderBrush="White" BorderThickness="0.3" Margin="15 10 5 10" MaxWidth="600" HorizontalAlignment="Stretch" CornerRadius="3">
+                            <Grid>
+                                <Grid.Resources>
+                                    <SolidColorBrush x:Key="PrimaryHueMidBrush" Color="Transparent"/>
+                                </Grid.Resources>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width=".2*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Button Width="Auto" Height="Auto"
+                                    Style="{StaticResource MaterialDesignFlatButton}" 
+                                    Content="{materialDesign:PackIcon Kind=Search, Size=20}" 
+                                    Foreground="White"/>
+                                <TextBox Grid.Column="1" Margin="5 0" 
+                                    Text="{Binding ContentSearch,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
+                                    CaretBrush="White" VerticalContentAlignment="Center" 
+                                    FontSize="16" Foreground="White" 
+                                    materialDesign:HintAssist.Hint="Enter text to search" 
+                                    BorderBrush="Transparent">
+                                    <TextBox.InputBindings>
+                                        <KeyBinding Command="{Binding SearchAccountCommand}" Key="Return"/>
+                                    </TextBox.InputBindings>
+                                </TextBox>
                             </Grid>
-                            </materialDesign:Card>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </ScrollViewer>
-        </Grid>
+                        </Border>
+                        <Button Grid.Column="2" HorizontalAlignment="Right" Margin="4" Padding="8"
+                            Style="{StaticResource MaterialDesignRaisedButton}"
+                            Command="{Binding AddNewAccountCommand}">
+                            <StackPanel Orientation="Horizontal">
+                                <materialDesign:PackIcon Kind="PlusCircle" VerticalAlignment="Center" Width="16" Height="16"/>
+                                <Grid Width="4"/>
+                                <TextBlock Text="New Account" FontSize="16" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Button>
+                    </Grid>
+                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden">
+                    <ItemsControl ItemsSource="{Binding Accounts}" HorizontalAlignment="left" Margin="0 5">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel Orientation="Horizontal"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <materialDesign:Card Margin="4"
+                                        Background="{StaticResource PrimaryLightBrush}"
+                                        Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"
+                                        Padding="0" Width="200">
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition/>
+                                            <RowDefinition/>
+                                            <RowDefinition/>
+                                        </Grid.RowDefinitions>
+                                        <Grid Grid.Row="0">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="80"/>
+                                                <ColumnDefinition/>
+                                            </Grid.ColumnDefinitions>
+                                            <TextBlock Grid.Column="0" Text="ID:" VerticalAlignment="Center"/>
+                                            <TextBlock Grid.Column="1" Text="{Binding id}" VerticalAlignment="Center" />
+                                        </Grid>
+                                        <Grid Grid.Row="1" Margin="2">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="80"/>
+                                                <ColumnDefinition/>
+                                            </Grid.ColumnDefinitions>
+                                            <TextBlock Grid.Column="0" Text="Username:" VerticalAlignment="Center"/>
+                                            <TextBlock Grid.Column="1" Text="{Binding username}" VerticalAlignment="Center"/>
+                                        </Grid>
+                                    </Grid>
+                                </materialDesign:Card>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+            </Grid>
+        </materialDesign:DialogHost>
+        
     </Grid>
 </UserControl>
