--- a/HotelManagement/HotelManagement/Views/InvoiceView.xaml
+++ b/HotelManagement/HotelManagement/Views/InvoiceView.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl x:Class="HotelManagement.Views.ReportsView"
+﻿<UserControl x:Class="HotelManagement.Views.InvoiceView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HotelManagement.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
+             xmlns:local="clr-namespace:HotelManagement.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="600" d:DesignWidth="1000">
     <UserControl.DataContext>
-        <viewModels:ReportsViewModel/>
+        <viewModels:InvoiceViewModel/>
     </UserControl.DataContext>
     <Grid>
         <StackPanel Orientation="Vertical"
@@ -18,7 +18,7 @@
             <materialDesign:PackIcon HorizontalAlignment="Center"
                                               Foreground="{StaticResource PrimaryDarkBrush}"
                                               Width="100" Height="100"
-                                              Kind="FileChart"/>
+                                              Kind="Receipt"/>
             <TextBlock FontSize="40" FontWeight="Bold" 
                        VerticalAlignment="Center" HorizontalAlignment="Center" 
                        Foreground="{StaticResource PrimaryDarkBrush}"
